SubBt/force-app/main/default/objects/Inventory_Management__c/Inventory_Management__c.object-meta.xml
<CustomObject>
    <description>Stock management for the available product</description>
    <label>Inventory Management</label>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>