SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Consumed_Items__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Items__c</fullName>
    <description>This is the count of items consumed in completed service requests.</description>
    <label>Consumed Items</label>
    <summarizedField>Product__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Product__c.Quantity_Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>