SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost(Per Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>