SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <formula>Initial_Stock__c -  Consumed_Items__c</formula>
    <label>Current Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>