SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Initial_Stock__c.field-meta.xml
<CustomField>
    <fullName>Initial_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Initial Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>