SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Product_Name__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>