SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <inlineHelpText>To prevent duplicate products.</inlineHelpText>
    <label>Product Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>