SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Inventory_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>