SubBt/force-app/main/default/objects/Inventory_Management__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KGs</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>kWs</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>