SubBt/force-app/main/default/objects/Inventory_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Initial_Stock__c</columns>
    <columns>Consumed_Items__c</columns>
    <columns>Current_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>